--- a/task_chatbot/config.json
+++ b/task_chatbot/config.json
@@ -1,22 +1,56 @@
 {
   "max_round_num": 20,
-  "agent_request_slots": ["os_request", "brand", "price", "color"],
-  "agent_inform_slots": ["os_inform", "brand", "price", "color", "ticket"],
+  "agent_request_slots": ["moviename", "theater", "starttime", "date", "genre", "state", "city", "zip",
+    "critic_ratingmpaa_rating", "distanceconstraints", "video_format", "theater_chain", "price", "actor",
+    "description", "other", "numberofkids", "numberofpeople"],
+  "agent_inform_slots": ["moviename", "theater", "starttime", "date", "genre", "state", "city", "zip", "critic_rating",
+    "mpaa_rating", "distanceconstraints", "video_format", "theater_chain", "price", "actor",
+    "description", "other", "numberofkids", "ticket"],
   "no_query_slots": ["numberofpeople", "ticket"],
   "all_intents": ["inform", "request", "thanks", "match_found", "accept", "reject", "done"],
   "agent_rule_requests": [
-    {"intent": "request", "inform_slots": {}, "request_slots": ["os_request"]}, 
-    {"intent": "inform", "inform_slots": {"brand": "PLACEHOLDER"}, "request_slots": []}, 
-    {"intent": "request", "inform_slots": {}, "request_slots": ["price"]}, 
-    {"intent": "request", "inform_slots": {}, "request_slots": ["color"]}, 
+    {"intent": "request", "inform_slots": {}, "request_slots": ["moviename"]}, 
+    {"intent": "request", "inform_slots": {}, "request_slots": ["starttime"]}, 
+    {"intent": "request", "inform_slots": {}, "request_slots": ["city"]}, 
+    {"intent": "request", "inform_slots": {}, "request_slots": ["date"]}, 
+    {"intent": "request", "inform_slots": {}, "request_slots": ["theater"]}, 
+    {"intent": "request", "inform_slots": {}, "request_slots": ["numberofpeople"]}, 
     {"intent": "match_found", "inform_slots": {}, "request_slots": []}, 
     {"intent": "done", "inform_slots": {}, "request_slots": []}
   ],
-  "slot_name_translations": {
-    "Betriebssystem? Android oder iOS": "os_request",
-    "Betriebssystem": "os_inform",
-    "Marke": "brand",
+  "slot_name_translations":
+  {
+    "Film": "moviename",
+    "Filmtitel": "moviename",
+    "Filmname": "moviename",
+    "Kino": "theater",
+    "Kinotheater": "theater",
+    "Theater": "theater",
+    "Zeit": "starttime",
+    "Startzeit": "starttime",
+    "Uhrzeit": "starttime",
+    "Datum": "date",
+    "Genre": "genre",
+    "Staat": "state",
+    "Stadt": "city",
+    "Postleitzahl": "zip",
+    "Bewertung": "critic_rating",
+    "USK": "mpaa_rating",
+    "USK Einstufung": "mpaa_rating",
+    "Distanz": "distanceconstraints",
+    "Format": "video_format",
+    "Videoformat": "video_format",
+    "Kinokette": "theater_chain",
+    "Kette": "theater_chain",
     "Preis": "price",
-    "Farbe": "color"
+    "Schauspieler": "actor",
+    "Schauspielerin": "actor",
+    "Beschreibung": "description",
+    "Sonstiges": "other",
+    "Kinder": "numberofkids",
+    "Anzahl Kinder": "numberofkids",
+    "Personen": "numberofpeople",
+    "Personenzahl": "numberofpeople",
+    "Anzahl Personen": "numberofpeople"
   }
 }
